--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
+pillow==11.0.0
 protobuf==5.28.3
 Pygments==2.18.0
 requests==2.32.3
